examples/test/testpolicy3193.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3193
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key3: value26
      key23: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value24
          key24: value12
          key40: value44
      podSelector:
        matchLabels:
          key31: value14
